// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tenure-investigation-result-view check snapshots for each related state it renders TenureInvestigationResultView view correctly for InterviewRescheduled state 1`] = `<div />`;

exports[`tenure-investigation-result-view check snapshots for each related state it renders TenureInvestigationResultView view correctly for InterviewScheduled state 1`] = `<div />`;

exports[`tenure-investigation-result-view check snapshots for each related state it renders TenureInvestigationResultView view correctly for TenureInvestigationFailed state 1`] = `
<div>
  <div
    data-testid="changeofname-tenure-investigation-result"
  >
    <div
      class="mtfh-box mtfh-box--success"
    >
      <div
        class="mtfh-status-heading"
      >
        <svg
          fill="none"
          height="45"
          viewBox="0 0 45 45"
          width="45"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="22.5"
            cy="22.5"
            fill="white"
            r="21.75"
            stroke="#00664F"
            stroke-width="1.5"
          />
          <path
            clip-rule="evenodd"
            d="M35 15.5127L18.775 33L11 24.6201L14.2591 21.1074L18.775 25.9746L31.7409 12L35 15.5127Z"
            fill="#00664F"
            fill-rule="evenodd"
          />
        </svg>
        <h4
          class="lbh-heading-h4 mtfh-status-heading__title"
        >
          Supporting documents approved
        </h4>
      </div>
      <div
        class="govuk-link lbh-link lbh-link--no-visited-state"
        style="margin-left: 60px; margin-top: 17.5px;"
      >
        <a
          class="govuk-link lbh-link lbh-link--no-visited-state"
          href="http://des/teams/1/dashboard/requests"
          target="_blank"
        >
          View documents on the Document Evidence Store
        </a>
      </div>
    </div>
    <div
      class="mtfh-box mtfh-box--warning"
    >
      <div
        class="mtfh-status-box"
      >
        <svg
          fill="none"
          height="45"
          viewBox="0 0 45 45"
          width="45"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="22.5"
            cy="22.5"
            fill="white"
            r="21.75"
            stroke="#BE3A34"
            stroke-width="1.5"
          />
          <path
            d="M24.2969 26.6587H20.6035L19.8315 11.8701H25.0688L24.2969 26.6587ZM19.771 31.8354C19.771 30.9878 19.998 30.347 20.4521 29.9131C20.9062 29.4792 21.5672 29.2622 22.4351 29.2622C23.2726 29.2622 23.9185 29.4842 24.3726 29.9282C24.8368 30.3722 25.0688 31.008 25.0688 31.8354C25.0688 32.6326 24.8368 33.2633 24.3726 33.7275C23.9084 34.1816 23.2625 34.4087 22.4351 34.4087C21.5874 34.4087 20.9315 34.1867 20.4673 33.7427C20.0031 33.2886 19.771 32.6528 19.771 31.8354Z"
            fill="#BE3A34"
          />
        </svg>
        <div>
          <div
            class="mtfh-status-heading__title"
          >
            <h4
              class="lbh-heading-h4"
            >
              Tenure investigator recommendation: Decline application
            </h4>
          </div>
        </div>
      </div>
    </div>
    <form
      action="#"
      novalidate=""
    >
      <fieldset
        class="govuk-form-group lbh-form-group"
        id="choice"
      >
        <legend
          class="govuk-label lbh-label"
          for="choice-field"
        >
          
          
        </legend>
        <div
          class="govuk-radios lbh-radios"
          id="choice-field"
        >
          <h4
            class="lbh-heading-h4"
            name="choice"
            style="margin-bottom: 26px;"
          >
            Next steps
          </h4>
          <div
            class="govuk-radios__item"
          >
            <input
              class="govuk-radios__input"
              id="ho-appointment"
              name="choice"
              type="radio"
              value="appointment"
            />
            <label
              class="govuk-label govuk-radios__label"
              for="ho-appointment"
            >
              Make an appointment with the applicant for an interview
            </label>
          </div>
          <div
            class="govuk-radios__item"
          >
            <input
              class="govuk-radios__input"
              id="ho-review"
              name="choice"
              type="radio"
              value="review"
            />
            <label
              class="govuk-label govuk-radios__label"
              for="ho-review"
            >
              I have passed the case to the Area Housing Manager for review and received a decision
            </label>
          </div>
        </div>
      </fieldset>
      <button
        class="govuk-button lbh-button"
        disabled=""
        style="width: 222px;"
        type="submit"
      >
        Confirm
      </button>
    </form>
  </div>
</div>
`;

exports[`tenure-investigation-result-view check snapshots for each related state it renders TenureInvestigationResultView view correctly for TenureInvestigationPassed state 1`] = `
<div>
  <div
    data-testid="changeofname-tenure-investigation-result"
  >
    <div
      class="mtfh-box mtfh-box--success"
    >
      <div
        class="mtfh-status-heading"
      >
        <svg
          fill="none"
          height="45"
          viewBox="0 0 45 45"
          width="45"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="22.5"
            cy="22.5"
            fill="white"
            r="21.75"
            stroke="#00664F"
            stroke-width="1.5"
          />
          <path
            clip-rule="evenodd"
            d="M35 15.5127L18.775 33L11 24.6201L14.2591 21.1074L18.775 25.9746L31.7409 12L35 15.5127Z"
            fill="#00664F"
            fill-rule="evenodd"
          />
        </svg>
        <h4
          class="lbh-heading-h4 mtfh-status-heading__title"
        >
          Supporting documents approved
        </h4>
      </div>
      <div
        class="govuk-link lbh-link lbh-link--no-visited-state"
        style="margin-left: 60px; margin-top: 17.5px;"
      >
        <a
          class="govuk-link lbh-link lbh-link--no-visited-state"
          href="http://des/teams/1/dashboard/requests"
          target="_blank"
        >
          View documents on the Document Evidence Store
        </a>
      </div>
    </div>
    <div
      class="mtfh-box mtfh-box--success"
    >
      <div
        class="mtfh-status-box"
      >
        <svg
          fill="none"
          height="45"
          viewBox="0 0 45 45"
          width="45"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="22.5"
            cy="22.5"
            fill="white"
            r="21.75"
            stroke="#00664F"
            stroke-width="1.5"
          />
          <path
            clip-rule="evenodd"
            d="M35 15.5127L18.775 33L11 24.6201L14.2591 21.1074L18.775 25.9746L31.7409 12L35 15.5127Z"
            fill="#00664F"
            fill-rule="evenodd"
          />
        </svg>
        <div>
          <div
            class="mtfh-status-heading__title"
          >
            <h4
              class="lbh-heading-h4"
            >
              Tenure investigator recommendation: Approve application
            </h4>
          </div>
        </div>
      </div>
    </div>
    <form
      action="#"
      novalidate=""
    >
      <fieldset
        class="govuk-form-group lbh-form-group"
        id="choice"
      >
        <legend
          class="govuk-label lbh-label"
          for="choice-field"
        >
          
          
        </legend>
        <div
          class="govuk-radios lbh-radios"
          id="choice-field"
        >
          <h4
            class="lbh-heading-h4"
            name="choice"
            style="margin-bottom: 26px;"
          >
            Next steps
          </h4>
          <div
            class="govuk-radios__item"
          >
            <input
              class="govuk-radios__input"
              id="ho-appointment"
              name="choice"
              type="radio"
              value="appointment"
            />
            <label
              class="govuk-label govuk-radios__label"
              for="ho-appointment"
            >
              Make an appointment with the applicant for an interview
            </label>
          </div>
          <div
            class="govuk-radios__item"
          >
            <input
              class="govuk-radios__input"
              id="ho-review"
              name="choice"
              type="radio"
              value="review"
            />
            <label
              class="govuk-label govuk-radios__label"
              for="ho-review"
            >
              I have passed the case to the Area Housing Manager for review and received a decision
            </label>
          </div>
        </div>
      </fieldset>
      <button
        class="govuk-button lbh-button"
        disabled=""
        style="width: 222px;"
        type="submit"
      >
        Confirm
      </button>
    </form>
  </div>
</div>
`;

exports[`tenure-investigation-result-view check snapshots for each related state it renders TenureInvestigationResultView view correctly for TenureInvestigationPassedWithInt state 1`] = `
<div>
  <div
    data-testid="changeofname-tenure-investigation-result"
  >
    <div
      class="mtfh-box mtfh-box--success"
    >
      <div
        class="mtfh-status-heading"
      >
        <svg
          fill="none"
          height="45"
          viewBox="0 0 45 45"
          width="45"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="22.5"
            cy="22.5"
            fill="white"
            r="21.75"
            stroke="#00664F"
            stroke-width="1.5"
          />
          <path
            clip-rule="evenodd"
            d="M35 15.5127L18.775 33L11 24.6201L14.2591 21.1074L18.775 25.9746L31.7409 12L35 15.5127Z"
            fill="#00664F"
            fill-rule="evenodd"
          />
        </svg>
        <h4
          class="lbh-heading-h4 mtfh-status-heading__title"
        >
          Supporting documents approved
        </h4>
      </div>
      <div
        class="govuk-link lbh-link lbh-link--no-visited-state"
        style="margin-left: 60px; margin-top: 17.5px;"
      >
        <a
          class="govuk-link lbh-link lbh-link--no-visited-state"
          href="http://des/teams/1/dashboard/requests"
          target="_blank"
        >
          View documents on the Document Evidence Store
        </a>
      </div>
    </div>
    <div
      class="mtfh-box"
    >
      <div
        class="mtfh-status-box"
      >
        <svg
          fill="none"
          height="45"
          viewBox="0 0 45 45"
          width="45"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="22.5"
            cy="22.5"
            fill="white"
            r="21.75"
            stroke="#0B0C0C"
            stroke-width="1.5"
          />
          <path
            d="M20.2251 12.7026C20.2251 11.1991 21.0627 10.4473 22.7378 10.4473C24.4129 10.4473 25.2505 11.1991 25.2505 12.7026C25.2505 13.4191 25.0386 13.9792 24.6147 14.3828C24.201 14.7764 23.5754 14.9731 22.7378 14.9731C21.0627 14.9731 20.2251 14.2163 20.2251 12.7026ZM25.0386 34H20.4219V17.0771H25.0386V34Z"
            fill="#0B0C0C"
          />
        </svg>
        <div>
          <div
            class="mtfh-status-heading__title"
          >
            <h4
              class="lbh-heading-h4"
            >
              Tenure investigator recommendation: Interview Applicant
            </h4>
          </div>
        </div>
      </div>
    </div>
    <form
      action="#"
      novalidate=""
    >
      <fieldset
        class="govuk-form-group lbh-form-group"
        id="choice"
      >
        <legend
          class="govuk-label lbh-label"
          for="choice-field"
        >
          
          
        </legend>
        <div
          class="govuk-radios lbh-radios"
          id="choice-field"
        >
          <h4
            class="lbh-heading-h4"
            name="choice"
            style="margin-bottom: 26px;"
          >
            Next steps
          </h4>
          <div
            class="govuk-radios__item"
          >
            <input
              class="govuk-radios__input"
              id="ho-appointment"
              name="choice"
              type="radio"
              value="appointment"
            />
            <label
              class="govuk-label govuk-radios__label"
              for="ho-appointment"
            >
              Make an appointment with the applicant for an interview
            </label>
          </div>
          <div
            class="govuk-radios__item"
          >
            <input
              class="govuk-radios__input"
              id="ho-review"
              name="choice"
              type="radio"
              value="review"
            />
            <label
              class="govuk-label govuk-radios__label"
              for="ho-review"
            >
              I have passed the case to the Area Housing Manager for review and received a decision
            </label>
          </div>
        </div>
      </fieldset>
      <button
        class="govuk-button lbh-button"
        disabled=""
        style="width: 222px;"
        type="submit"
      >
        Confirm
      </button>
    </form>
  </div>
</div>
`;
